# QTquant

./: .gitignore  CMakeLists.txt  README.md
StarQuantMobile/android/: AndroidManifest.xml  build.gradle  gradle.properties
StarQuantMobile/android/res/values/: colors.xml  strings.xml  styles.xml
StarQuantMobile/qml/: main.qml
StarQuantMobile/qml/pages/: HomePage.qml  MarketPage.qml  PortfolioPage.qml  ScreenerPage.qml  StrategyPage.qml
StarQuantMobile/src/: main.cpp
StarQuantMobile/src/indicator/: indicators.cpp  indicators.h
StarQuantMobile/src/market/: marketdata.cpp  marketdata.h
StarQuantMobile/src/screener/: stockscreener.cpp  stockscreener.h
StarQuantMobile/src/strategy/: movingaveragestrategy.cpp  movingaveragestrategy.h  prosperitygrowthstrategy.cpp  prosperitygrowthstrategy.h  strategybase.cpp  strategybase.h
quant/: gradle.properties  run-local-debug.bat  settings.gradle.kts
quant/app/: build.gradle.kts
quant/app/src/androidTest/java/com/example/starquant/: ExampleInstrumentedTest.kt
quant/app/src/main/: AndroidManifest.xml
quant/app/src/main/java/com/example/starquant/: MainActivity.kt
quant/app/src/main/java/com/example/starquant/data/model/: MarketData.kt  StockModels.kt  StrategyModels.kt
quant/app/src/main/java/com/example/starquant/data/source/: MarketDataRepository.kt  MarketEnums.kt  MarketParsers.kt
quant/app/src/main/java/com/example/starquant/domain/indicator/: TechnicalIndicators.kt
quant/app/src/main/java/com/example/starquant/domain/screener/: StockScreener.kt
quant/app/src/main/java/com/example/starquant/domain/strategy/: MovingAverageStrategy.kt  ProsperityGrowthStrategy.kt  StrategyBase.kt
quant/app/src/main/java/com/example/starquant/ui/chart/: CandlestickChart.kt
quant/app/src/main/java/com/example/starquant/ui/components/: StarUi.kt
quant/app/src/main/java/com/example/starquant/ui/screens/: AccountScreen.kt  FavoritesScreen.kt  HomeScreen.kt  LoginScreen.kt  MarketScreen.kt  ScreenerScreen.kt  StrategyScreen.kt
quant/app/src/main/java/com/example/starquant/ui/theme/: Color.kt  Theme.kt  Type.kt
quant/app/src/main/java/com/example/starquant/ui/viewmodel/: MainViewModel.kt  (+1 more)
quant/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
quant/app/src/main/res/values/: strings.xml  themes.xml
quant/app/src/test/java/com/example/starquant/: ExampleUnitTest.kt
quant/doc/: StarQuant_改良方案.md  StarQuant_设计文档_v2.md
quant/gradle/: libs.versions.toml
quant/gradle/wrapper/: gradle-wrapper.properties
resources/: starquant.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/indicator/: indicators.cpp  indicators.h
src/market/: marketdata.cpp  marketdata.h
src/strategy/: movingaveragestrategy.cpp  movingaveragestrategy.h  prosperitygrowthstrategy.cpp  prosperitygrowthstrategy.h  strategybase.cpp  strategybase.h
src/ui/: accountpanel.cpp  accountpanel.h  accountpanel.ui  candlestickwidget.cpp  candlestickwidget.h  chartpanel.cpp  chartpanel.h  chartpanel.ui  logindialog.cpp  logindialog.h  logindialog.ui  marketpanel.cpp  marketpanel.h  marketpanel.ui  newspanel.cpp  newspanel.h  signalsignalpanel.cpp  signalsignalpanel.h  statisticspanel.cpp  statisticspanel.h  strategypanel.cpp  strategypanel.h  strategypanel.ui
